--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,7 +12,7 @@
   "FOOTER": "Designed and developed by Toàn",
   "INTRO1": "Hello everyone, my name is Toàn. I am a Vietnamese. I am a student at Saigon University of Information Technology since 2018.",
   "INTRO3": "I have been interested in Chinese since I was a third year student because I love Chinese culture and I believe that in the future China will lead in many fields of science, technology. Learning Chinese helps me have more job opportunities with better income in the future. And help me to be able to orient my children later, hihi.",
-  "INTRO4": "This is a combination of what I can do and what I like. Currently there is only Listening section. Hopefully in the future I can scale up this project more and integrate more projects into it. Thank you for reading these lines and accompanying me.",
+  "INTRO4": "This is a combination of what I can do and what I like. Hopefully in the future I can scale up this project more and update more features. Thank you for reading these lines and accompanying me.",
   "WORD.DEFINE.SINGULAR_YOU": "(singular) you",
   "WORD.DEFINE.GOOD": "good, fine",
   "WORD.DEFINE.POLITE_YOU": "(polite) you",
@@ -94,5 +94,20 @@
   "WORD.DEFINE.HOW_MANY2": "how many, how much",
   "WORD.DEFINE.MONEY": "money",
   "WORD.DEFINE.UNIT_OF_MONEY": "a unit of money",
-  "WORD.DEFINE.THAT": "that"
+  "WORD.DEFINE.THAT": "that",
+  "WORD.DEFINE.SMALL": "small, little",
+  "WORD.DEFINE.CAT": "cat",
+  "WORD.DEFINE.TO_BE_IN": "to be in/on/at, in/at/on",
+  "WORD.DEFINE.THERE": "there",
+  "WORD.DEFINE.DOG": "dog",
+  "WORD.DEFINE.CHAIR": "chair",
+  "WORD.DEFINE.UNDER": "under",
+  "WORD.DEFINE.ON": "on",
+  "WORD.DEFINE.IN": "in",
+  "WORD.DEFINE.WHERE": "where",
+  "WORD.DEFINE.TO_WORK": "to work/job",
+  "WORD.DEFINE.SON": "son",
+  "WORD.DEFINE.HOSPITAL": "hospital",
+  "WORD.DEFINE.DOCTOR": "doctor",
+  "WORD.DEFINE.FATHER": "father"
 }
