--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -12,7 +12,7 @@
   "FOOTER": "Được thiết kế và phát triển bởi Toàn",
   "INTRO1": "Xin chào mọi người, mình là Toàn. Mình là sinh viên khoa Công nghệ thông tin trường Đại học Sài Gòn từ năm 2018.",
   "INTRO3": "Mình có niềm yêu thích với tiếng Trung từ khi còn là sinh viên năm Ba. Lý do là vì mình yêu thích văn hóa Trung Quốc và vì mình tin rằng trong tương lai Trung Quốc sẽ dẫn đầu trong rất nhiều lĩnh vực khoa học kỹ thuật, công nghệ. Học tiếng Trung giúp mình có thêm nhiều cơ hội việc làm có thu nhập tốt hơn trong tương lai. Và giúp mình sau này có thể định hướng cho con mình nữa, hihi.",
-  "INTRO4": "Đây là sự kết hợp giữa điều mình có thể làm và điều mình thích. Hiện tại chỉ có phần Listening. Hy vọng trong tương lai mình có thể mở rộng dự án này hơn và tích hợp thêm nhiều dự án khác vào nữa. Cảm ơn mọi người đã đọc những dòng này và đồng hành cùng với mình.",
+  "INTRO4": "Đây là sự kết hợp giữa điều mình có thể làm và điều mình thích. Hy vọng trong tương lai mình có thể mở rộng dự án này hơn và cập nhật thêm nhiều tính năng khác vào nữa. Cảm ơn mọi người đã đọc những dòng này và đồng hành cùng với mình.",
   "WORD.DEFINE.SINGULAR_YOU": "bạn",
   "WORD.DEFINE.GOOD": "tốt, đẹp",
   "WORD.DEFINE.POLITE_YOU": "ngài, ông, bà (cách gọi kính trọng)",
@@ -94,5 +94,20 @@
   "WORD.DEFINE.HOW_MANY2": "bao nhiêu",
   "WORD.DEFINE.MONEY": "tiền",
   "WORD.DEFINE.UNIT_OF_MONEY": "đơn vị tiền tệ",
-  "WORD.DEFINE.THAT": "đó, kia"
+  "WORD.DEFINE.THAT": "đó, kia",
+  "WORD.DEFINE.SMALL": "nhỏ",
+  "WORD.DEFINE.CAT": "con mèo",
+  "WORD.DEFINE.TO_BE_IN": "ở",
+  "WORD.DEFINE.THERE": "ở đó",
+  "WORD.DEFINE.DOG": "con chó",
+  "WORD.DEFINE.CHAIR": "cái ghế",
+  "WORD.DEFINE.UNDER": "ở dưới",
+  "WORD.DEFINE.ON": "ở trên",
+  "WORD.DEFINE.IN": "ở trong",
+  "WORD.DEFINE.WHERE": "ở đâu",
+  "WORD.DEFINE.TO_WORK": "làm việc/công việc",
+  "WORD.DEFINE.SON": "con trai",
+  "WORD.DEFINE.HOSPITAL": "bệnh viện",
+  "WORD.DEFINE.DOCTOR": "bác sỹ",
+  "WORD.DEFINE.FATHER": "cha"
 }
