--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -54,7 +54,7 @@
   "WORD.DEFINE.THIS_YEAR": "this year",
   "WORD.DEFINE.EXTENT": "indicating degree or extent",
   "WORD.DEFINE.BIG": "(of age) old",
-  "WORD.DEFINE.CAN": "can, to be able to",
+  "WORD.DEFINE.KNOW": "can, to be able to",
   "WORD.DEFINE.TO_SAY": "to speak, to say",
   "WORD.DEFINE.MOTHER": "mother",
   "WORD.DEFINE.DISH": "dish, cuisine",
@@ -109,5 +109,27 @@
   "WORD.DEFINE.SON": "son",
   "WORD.DEFINE.HOSPITAL": "hospital",
   "WORD.DEFINE.DOCTOR": "doctor",
-  "WORD.DEFINE.FATHER": "father"
+  "WORD.DEFINE.FATHER": "father",
+  "WORD.DEFINE.DESK": "desk, table",
+  "WORD.DEFINE.UP": "up, above",
+  "WORD.DEFINE.COMPUTER": "computer",
+  "WORD.DEFINE.AND": "and",
+  "WORD.DEFINE.BEN": "a measure word for books",
+  "WORD.DEFINE.INNER": "inner, inside, interior",
+  "WORD.DEFINE.FRONT": "front",
+  "WORD.DEFINE.BACK": "back",
+  "WORD.DEFINE.HERE": "here",
+  "WORD.DEFINE.THERE_ARE_NOT": "there are not",
+  "WORD.DEFINE.CAN": "can, maybe",
+  "WORD.DEFINE.TO_SIT": "to sit, to be seat",
+  "WORD.DEFINE.NOW": "now",
+  "WORD.DEFINE.OCLOCK": "o'clock",
+  "WORD.DEFINE.MINUTE": "minute",
+  "WORD.DEFINE.TO_EAT_A_MEAL": "to eat a meal",
+  "WORD.DEFINE.TIME": "time, moment",
+  "WORD.DEFINE.GO_BACK": "to come/go back, to return",
+  "WORD.DEFINE.WE": "we, us",
+  "WORD.DEFINE.FILM": "film, movie",
+  "WORD.DEFINE.TO_LIVE": "to live, to stay",
+  "WORD.DEFINE.BEFORE": "before, earlier than"
 }
