--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -54,7 +54,7 @@
   "WORD.DEFINE.THIS_YEAR": "năm nay",
   "WORD.DEFINE.EXTENT": "nhiều, (đại từ nghi vấn) bao nhiêu",
   "WORD.DEFINE.BIG": "to, bao nhiêu tuổi",
-  "WORD.DEFINE.CAN": "biết",
+  "WORD.DEFINE.KNOW": "biết",
   "WORD.DEFINE.TO_SAY": "nói",
   "WORD.DEFINE.MOTHER": "mẹ",
   "WORD.DEFINE.DISH": "đồ ăn",
@@ -109,5 +109,27 @@
   "WORD.DEFINE.SON": "con trai",
   "WORD.DEFINE.HOSPITAL": "bệnh viện",
   "WORD.DEFINE.DOCTOR": "bác sỹ",
-  "WORD.DEFINE.FATHER": "cha"
+  "WORD.DEFINE.FATHER": "cha",
+  "WORD.DEFINE.DESK": "cái bàn",
+  "WORD.DEFINE.UP": "phía trên",
+  "WORD.DEFINE.COMPUTER": "máy tính",
+  "WORD.DEFINE.AND": "và",
+  "WORD.DEFINE.BEN": "cuốn",
+  "WORD.DEFINE.INNER": "phía trong",
+  "WORD.DEFINE.FRONT": "phía trước",
+  "WORD.DEFINE.BACK": "phía sau",
+  "WORD.DEFINE.HERE": "ở đây",
+  "WORD.DEFINE.THERE_ARE_NOT": "không có",
+  "WORD.DEFINE.CAN": "có thể",
+  "WORD.DEFINE.TO_SIT": "ngồi",
+  "WORD.DEFINE.NOW": "hiện tại",
+  "WORD.DEFINE.OCLOCK": "giờ",
+  "WORD.DEFINE.MINUTE": "phút",
+  "WORD.DEFINE.TO_EAT_A_MEAL": "ăn cơm",
+  "WORD.DEFINE.TIME": "thời gian",
+  "WORD.DEFINE.GO_BACK": "trở về",
+  "WORD.DEFINE.WE": "chúng ta",
+  "WORD.DEFINE.FILM": "phim",
+  "WORD.DEFINE.TO_LIVE": "sống",
+  "WORD.DEFINE.BEFORE": "phía trước"
 }
