--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,6 +6,7 @@
   "VOCABULARY": "Vocabulary",
   "CURRICULUM": "Curriculum",
   "EXERCISE": "Exercise",
+  "COMING_SOON": "Coming soon...",
   "SELECT": "Select a file",
   "CURRICULUM.01-4": "01-4: Initials, finals and tones of Chinese Pinyin (1)",
   "CURRICULUM.02-4": "02-4: Initials, finals and tones of Chinese Pinyin (2)",
