--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -6,7 +6,7 @@
   "VOCABULARY": "Từ vựng",
   "CURRICULUM": "Giáo trình",
   "EXERCISE": "Bài tập",
-  "COMING_SOON": "\"Học thêm một ngoại ngữ, đến thêm một thế giới, sống thêm một cuộc đời...\"  Coming soon...",
+  "COMING_SOON": "Sắp có...",
   "SELECT": "Chọn bài đi nè",
   "CURRICULUM.01-4": "01-4: Thanh mẫu, vận mẫu và thanh điệu (1)",
   "CURRICULUM.02-4": "02-4: Thanh mẫu, vận mẫu và thanh điệu (2)",
