--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -2,6 +2,7 @@
   "VI": "VI",
   "EN": "EN",
   "SUPER_CHINESE": "Super Chinese",
+  "SLOGAN": "\"Học thêm một ngoại ngữ, đến thêm một thế giới, sống thêm một cuộc đời...\"",
   "HOME": "Trang chủ",
   "VOCABULARY": "Từ vựng",
   "CURRICULUM": "Giáo trình",
