--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,6 +2,7 @@
   "VI": "VI",
   "EN": "EN",
   "SUPER_CHINESE": "Super Chinese",
+  "SLOGAN": "Learn a new language, come more world, live more life.",
   "HOME": "Home",
   "VOCABULARY": "Vocabulary",
   "CURRICULUM": "Curriculum",
