--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -50,7 +50,7 @@
   "WORD.DEFINE.TO_HAVE": "to have, there be",
   "WORD.DEFINE.MOUTH": "mouth",
   "WORD.DEFINE.DAUGHTER": "daughter",
-  "WORD.DEFINE.HOW_MANY": "how many",
+  "WORD.DEFINE.HOW_MANY1": "how many",
   "WORD.DEFINE.AGE": "year (of age)",
   "WORD.DEFINE.LE": "used to indicate a change",
   "WORD.DEFINE.THIS_YEAR": "this year",
@@ -133,5 +133,44 @@
   "WORD.DEFINE.WE": "we, us",
   "WORD.DEFINE.FILM": "film, movie",
   "WORD.DEFINE.TO_LIVE": "to live, to stay",
-  "WORD.DEFINE.BEFORE": "before, earlier than"
+  "WORD.DEFINE.BEFORE": "before, earlier than",
+  "WORD.DEFINE.WEATHER": "weather",
+  "WORD.DEFINE.TOO": "too",
+  "WORD.DEFINE.HOT": "hot",
+  "WORD.DEFINE.COLD": "cold",
+  "WORD.DEFINE.TO_RAIN": "to rain",
+  "WORD.DEFINE.TO_FALL": "(of rain, snow, etc) to fall",
+  "WORD.DEFINE.RAIN": "rain",
+  "WORD.DEFINE.MISS": "miss, young lady",
+  "WORD.DEFINE.TO_COME": "to come",
+  "WORD.DEFINE.BODY": "body",
+  "WORD.DEFINE.TO_LOVE": "to love, to liek",
+  "WORD.DEFINE.SOME": "some, a few",
+  "WORD.DEFINE.FRUIT": "fruit",
+  "WORD.DEFINE.WATER": "water",
+  "WORD.DEFINE.HELLO": "hello, whey",
+  "WORD.DEFINE.ALSO": "also, too",
+  "WORD.DEFINE.TO_STUDY": "to study, to learn",
+  "WORD.DEFINE.TO_SLEEP": "to sleep",
+  "WORD.DEFINE.TELEVISION": "television",
+  "WORD.DEFINE.TO_LIKE": "to like, to be fond of",
+  "WORD.DEFINE.TO": "to",
+  "WORD.DEFINE.TO_MAKE_A_PHONE_CALL": "to make a phone call",
+  "WORD.DEFINE.BA": "a suggest indicating",
+  "WORD.DEFINE.THING": "thing, stuff",
+  "WORD.DEFINE.A_FEW": "a few, a little",
+  "WORD.DEFINE.APPLE": "apple",
+  "WORD.DEFINE.TO_SEE": "to see",
+  "WORD.DEFINE.MR": "Mr, sir",
+  "WORD.DEFINE.TO_DRIVE": "to drive",
+  "WORD.DEFINE.CAR": "car, vehicle",
+  "WORD.DEFINE.TO_COME_BACK": "to come back",
+  "WORD.DEFINE.HOUR": "hour",
+  "WORD.DEFINE.AFTER": "after, afterwards, later",
+  "WORD.DEFINE.CLOTHES": "clothes",
+  "WORD.DEFINE.BEAUTIFUL": "beautiful, pretty",
+  "WORD.DEFINE.A": "a sign of confirmation or defense",
+  "WORD.DEFINE.QUITE_A_FEW": "quite a few, many",
+  "WORD.DEFINE.THESE": "there",
+  "WORD.DEFINE.BOTH": "both, all"
 }
