--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -133,5 +133,44 @@
   "WORD.DEFINE.WE": "chúng ta",
   "WORD.DEFINE.FILM": "phim",
   "WORD.DEFINE.TO_LIVE": "sống",
-  "WORD.DEFINE.BEFORE": "phía trước"
+  "WORD.DEFINE.BEFORE": "phía trước",
+  "WORD.DEFINE.WEATHER": "thời tiết",
+  "WORD.DEFINE.TOO": "quá",
+  "WORD.DEFINE.HOT": "nóng",
+  "WORD.DEFINE.COLD": "lạnh",
+  "WORD.DEFINE.TO_RAIN": "mưa",
+  "WORD.DEFINE.TO_FALL": "rơi",
+  "WORD.DEFINE.RAIN": "cơn mưa",
+  "WORD.DEFINE.MISS": "tiểu thư",
+  "WORD.DEFINE.TO_COME": "đến",
+  "WORD.DEFINE.BODY": "thân thể, sức khoẻ",
+  "WORD.DEFINE.TO_LOVE": "yêu, thích",
+  "WORD.DEFINE.SOME": "vài",
+  "WORD.DEFINE.FRUIT": "trái cây",
+  "WORD.DEFINE.WATER": "nước",
+  "WORD.DEFINE.HELLO": "ê",
+  "WORD.DEFINE.ALSO": "cũng",
+  "WORD.DEFINE.TO_STUDY": "học",
+  "WORD.DEFINE.TO_SLEEP": "ngủ",
+  "WORD.DEFINE.TELEVISION": "truyền hình",
+  "WORD.DEFINE.TO_LIKE": "thích",
+  "WORD.DEFINE.TO": "(giới từ) cho",
+  "WORD.DEFINE.TO_MAKE_A_PHONE_CALL": "gọi điện thoại",
+  "WORD.DEFINE.BA": "đi/nhé",
+  "WORD.DEFINE.THING": "đồ",
+  "WORD.DEFINE.A_FEW": "một ít",
+  "WORD.DEFINE.APPLE": "táo",
+  "WORD.DEFINE.TO_SEE": "thấy, gặp",
+  "WORD.DEFINE.MR": "tiên sinh",
+  "WORD.DEFINE.TO_DRIVE": "lái",
+  "WORD.DEFINE.CAR": "xe",
+  "WORD.DEFINE.TO_COME_BACK": "quay về",
+  "WORD.DEFINE.HOUR": "giờ",
+  "WORD.DEFINE.AFTER": "sau",
+  "WORD.DEFINE.CLOTHES": "quần áo",
+  "WORD.DEFINE.BEAUTIFUL": "xinh, đẹp",
+  "WORD.DEFINE.A": "từ cảm thán",
+  "WORD.DEFINE.QUITE_A_FEW": "không ít",
+  "WORD.DEFINE.THESE": "những cái này",
+  "WORD.DEFINE.BOTH": "đều"
 }
