--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -172,5 +172,14 @@
   "WORD.DEFINE.A": "a sign of confirmation or defense",
   "WORD.DEFINE.QUITE_A_FEW": "quite a few, many",
   "WORD.DEFINE.THESE": "there",
-  "WORD.DEFINE.BOTH": "both, all"
+  "WORD.DEFINE.BOTH": "both, all",
+  "WORD.DEFINE.TO_MEET": "to meet, to know",
+  "WORD.DEFINE.YEAR": "year",
+  "WORD.DEFINE.COLLEGE": "college, university",
+  "WORD.DEFINE.HOTEL": "hotel, restaurant",
+  "WORD.DEFINE.TAXI": "taxi, cab",
+  "WORD.DEFINE.TOGETHER": "together",
+  "WORD.DEFINE.GLAD": "grad, happy",
+  "WORD.DEFINE.TO_LISTEN": "to listen",
+  "WORD.DEFINE.AIRPLANE": "airplane"
 }
