--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -178,7 +178,7 @@
   "WORD.DEFINE.COLLEGE": "đại học",
   "WORD.DEFINE.HOTEL": "khách sạn, nhà hàng",
   "WORD.DEFINE.TAXI": "tắc-xi",
-  "WORD.DEFINE.TOGETHER": "cùng nhất",
+  "WORD.DEFINE.TOGETHER": "cùng nhau",
   "WORD.DEFINE.GLAD": "vui",
   "WORD.DEFINE.TO_LISTEN": "nghe",
   "WORD.DEFINE.AIRPLANE": "máy bay"
