--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,7 @@
   "VOCABULARY": "Vocabulary",
   "CURRICULUM": "Curriculum",
   "EXERCISE": "Exercise",
+  "SETTING": "Setting",
   "LOGOUT": "Logout",
   "COMING_SOON": "Coming soon...",
   "SELECT": "Select a file",
