--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -7,6 +7,7 @@
   "VOCABULARY": "Từ vựng",
   "CURRICULUM": "Giáo trình",
   "EXERCISE": "Bài tập",
+  "SETTING": "Thiết lập",
   "LOGOUT": "Đăng xuất",
   "COMING_SOON": "Sắp có...",
   "SELECT": "Chọn bài đi nè",
