--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,12 +1,15 @@
 {
-  "VI": "VI",
-  "EN": "EN",
+  "CHOOSE_LANGUAGE": "Choose language",
+  "VI": "Vietnamese",
+  "EN": "English",
   "SUPER_CHINESE": "Super Chinese",
   "SLOGAN": "Learn a new language, come more world, live more life.",
   "HOME": "Home",
   "VOCABULARY": "Vocabulary",
   "CURRICULUM": "Curriculum",
   "EXERCISE": "Exercise",
+  "NEW": "New features",
+  "SUPPORT": "Support",
   "SETTING": "Setting",
   "LOGOUT": "Logout",
   "COMING_SOON": "Coming soon...",
