--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,5 @@
 {
-  "CHOOSE_LANGUAGE": "Choose language",
+  "CHOOSE_LANGUAGE": "Language/Ngôn ngữ",
   "VI": "Vietnamese",
   "EN": "English",
   "SUPER_CHINESE": "Super Chinese",
