--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -1,5 +1,5 @@
 {
-  "CHOOSE_LANGUAGE": "Chọn ngôn ngữ",
+  "CHOOSE_LANGUAGE": "Ngôn ngữ/Language",
   "VI": "Tiếng Việt",
   "EN": "Tiếng Anh",
   "SUPER_CHINESE": "Super Chinese",
