--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,10 +1,10 @@
 {
   "CHOOSE_LANGUAGE": "Language/Ngôn ngữ",
-  "VI": "Vietnamese",
+  "VI": "Tiếng Việt",
   "EN": "English",
   "SUPER_CHINESE": "Super Chinese",
   "SLOGAN": "Learn a new language, come more world, live more life.",
-  "HOME": "Home",
+  "ABOUT": "About",
   "VOCABULARY": "Vocabulary",
   "CURRICULUM": "Curriculum",
   "EXERCISE": "Exercise",
