--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -1,10 +1,10 @@
 {
   "CHOOSE_LANGUAGE": "Ngôn ngữ/Language",
   "VI": "Tiếng Việt",
-  "EN": "Tiếng Anh",
+  "EN": "English",
   "SUPER_CHINESE": "Super Chinese",
   "SLOGAN": "\"Học thêm một ngoại ngữ, đến thêm một thế giới, sống thêm một cuộc đời...\"",
-  "HOME": "Trang chủ",
+  "ABOUT": "Giới thiệu",
   "VOCABULARY": "Từ vựng",
   "CURRICULUM": "Giáo trình",
   "EXERCISE": "Bài tập",
