--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -4,6 +4,7 @@
   "EN": "English",
   "SUPER_CHINESE": "Super Chinese",
   "SLOGAN": "\"Học thêm một ngoại ngữ, đến thêm một thế giới, sống thêm một cuộc đời...\"",
+  "HOME": "Trang chủ",
   "ABOUT": "Giới thiệu",
   "VOCABULARY": "Từ vựng",
   "CURRICULUM": "Giáo trình",
