--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,6 +4,7 @@
   "EN": "English",
   "SUPER_CHINESE": "Super Chinese",
   "SLOGAN": "Learn a new language, come more world, live more life.",
+  "HOME": "Home",
   "ABOUT": "About",
   "VOCABULARY": "Vocabulary",
   "CURRICULUM": "Curriculum",
