--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,6 +5,7 @@
   "SUPER_CHINESE": "Super Chinese",
   "SLOGAN": "Learn a new language, come more world, live more life.",
   "HOME": "Home",
+  "USER_PROFILE": "User profile",
   "ABOUT": "About",
   "VOCABULARY": "Vocabulary",
   "CURRICULUM": "Curriculum",
