--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,7 +19,7 @@
   "CURRICULUM.01-4": "01-4: Initials, finals and tones of Chinese Pinyin (1)",
   "CURRICULUM.02-4": "02-4: Initials, finals and tones of Chinese Pinyin (2)",
   "FOOTER": "Designed and developed by Toàn",
-  "INTRO1": "Hello everyone, my name is Toàn. I am a Vietnamese. I am a student at Saigon University of Information Technology since 2018.",
+  "INTRO1": "Hello everyone, my name is Toàn. I am a Vietnamese Software Developer. I am a student at Saigon University of Information Technology since 2018.",
   "INTRO3": "I have been interested in Chinese since I was a third year student because I love Chinese culture and I believe that in the future China will lead in many fields of science, technology. Learning Chinese helps me have more job opportunities with better income in the future. And help me to be able to orient my children later, hihi.",
   "INTRO4": "This is a combination of what I can do and what I like. Hopefully in the future I can scale up this project more and update more features. Thank you for reading these lines and accompanying me.",
   "WORD.DEFINE.SINGULAR_YOU": "(singular) you",
