--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -19,7 +19,7 @@
   "CURRICULUM.01-4": "01-4: Thanh mẫu, vận mẫu và thanh điệu (1)",
   "CURRICULUM.02-4": "02-4: Thanh mẫu, vận mẫu và thanh điệu (2)",
   "FOOTER": "Được thiết kế và phát triển bởi Toàn",
-  "INTRO1": "Chào mọi người, mình là Toàn. Mình yêu thích và bắt đầu học tiếng Trung từ năm 2021. Lý do là vì mình yêu thích văn hóa Trung Quốc và vì mình tin rằng trong tương lai Trung Quốc sẽ dẫn đầu trong rất nhiều lĩnh vực khoa học kỹ thuật, công nghệ. Học tiếng Trung giúp mình có thêm nhiều cơ hội để tìm một công việc tốt hơn, thu nhập cao hơn trong tương lai.",
+  "INTRO1": "Chào mọi người, mình là Toàn. Mình là một Software Developer. Mình yêu thích và bắt đầu học tiếng Trung từ năm 2021. Lý do là vì mình yêu thích văn hóa Trung Quốc và vì mình tin rằng trong tương lai Trung Quốc sẽ dẫn đầu trong rất nhiều lĩnh vực khoa học kỹ thuật, công nghệ. Học tiếng Trung giúp mình có thêm nhiều cơ hội để tìm một công việc tốt hơn, thu nhập cao hơn trong tương lai.",
   "INTRO3": "Học tiếng Trung là bước ngoặt cuộc đời của mình. Không biết từ khi nào mà tiếng Trung trở thành một phần không thể thiếu trong cuộc sống của mình. Tiếng Trung giúp mình hiểu được thứ gọi là \"Học thêm một ngoại ngữ, đến thêm một thế giới, sống thêm một cuộc đời.\"",
   "INTRO4": "Đây là sự kết hợp giữa điều mình có thể làm và điều mình thích. Hy vọng trong tương lai mình có thể mở rộng dự án này hơn và cập nhật thêm nhiều tính năng khác vào nữa. Cảm ơn mọi người đã đọc những dòng này và đồng hành cùng với mình.",
   "WORD.DEFINE.SINGULAR_YOU": "bạn",
