--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -188,5 +188,15 @@
   "WORD.DEFINE.TOGETHER": "together",
   "WORD.DEFINE.GLAD": "grad, happy",
   "WORD.DEFINE.TO_LISTEN": "to listen",
-  "WORD.DEFINE.AIRPLANE": "airplane"
+  "WORD.DEFINE.AIRPLANE": "airplane",
+  "WORD.DEFINE.TO_TRAVEL": "to travel, to take a trip",
+  "WORD.DEFINE.TO_THINK": "to think, to feel",
+  "WORD.DEFINE.MOST": "most, to the greatest extent",
+  "WORD.DEFINE.WHY": "why",
+  "WORD.DEFINE.SPORT": "n./v. sport, to take physical exercise, to work out",
+  "WORD.DEFINE.TO_PLAY_FOOTBALL": "to play football",
+  "WORD.DEFINE.TO_WANT_TO": "to want to, would like to",
+  "WORD.DEFINE.NEW": "new",
+  "WORD.DEFINE.IT": "it",
+  "WORD.DEFINE.EYE": "eye"
 }
