--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -188,5 +188,15 @@
   "WORD.DEFINE.TOGETHER": "cùng nhau",
   "WORD.DEFINE.GLAD": "vui",
   "WORD.DEFINE.TO_LISTEN": "nghe",
-  "WORD.DEFINE.AIRPLANE": "máy bay"
+  "WORD.DEFINE.AIRPLANE": "máy bay",
+  "WORD.DEFINE.TO_TRAVEL": "du lịch",
+  "WORD.DEFINE.TO_THINK": "nghĩ, cảm thấy",
+  "WORD.DEFINE.MOST": "nhất",
+  "WORD.DEFINE.WHY": "tại sao",
+  "WORD.DEFINE.SPORT": "thể thao/ vận động",
+  "WORD.DEFINE.TO_PLAY_FOOTBALL": "đá banh",
+  "WORD.DEFINE.TO_WANT_TO": "muốn/ phải",
+  "WORD.DEFINE.NEW": "mới",
+  "WORD.DEFINE.IT": "nó",
+  "WORD.DEFINE.EYE": "mắt"
 }
