--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -198,5 +198,19 @@
   "WORD.DEFINE.TO_WANT_TO": "to want to, would like to",
   "WORD.DEFINE.NEW": "new",
   "WORD.DEFINE.IT": "it",
-  "WORD.DEFINE.EYE": "eye"
+  "WORD.DEFINE.EYE": "eye",
+  "WORD.DEFINE.NAME_OF_CAT": "name of a cat",
+  "WORD.DEFINE.TO_FALL_ILL": "to fall ill, to be sick",
+  "WORD.DEFINE.EVERY": "every, each",
+  "WORD.DEFINE.MORNING2": "morning",
+  "WORD.DEFINE.TO_JOG": "to run, to jog",
+  "WORD.DEFINE.TO_GET_UP": "to get up, to get out of bed",
+  "WORD.DEFINE.MEDICINE": "medicine, drug",
+  "WORD.DEFINE.TO_LEAVE_HOSPITAL": "to leave hospital, to be discharged from hospital",
+  "WORD.DEFINE.TO_COME_OUT": "to come/go out",
+  "WORD.DEFINE.TALL": "tall, high",
+  "WORD.DEFINE.METER": "meter",
+  "WORD.DEFINE.TO_KNOW": "to know",
+  "WORD.DEFINE.TO_TAKE_A_REST": "to have or take a rest",
+  "WORD.DEFINE.BUSY": "busy"
 }
