--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -198,5 +198,19 @@
   "WORD.DEFINE.TO_WANT_TO": "muốn/ phải",
   "WORD.DEFINE.NEW": "mới",
   "WORD.DEFINE.IT": "nó",
-  "WORD.DEFINE.EYE": "mắt"
+  "WORD.DEFINE.EYE": "mắt",
+  "WORD.DEFINE.NAME_OF_CAT": "Hoa hoa (tên của 1 con mèo)",
+  "WORD.DEFINE.TO_FALL_ILL": "bệnh",
+  "WORD.DEFINE.EVERY": "mỗi",
+  "WORD.DEFINE.MORNING2": "sáng sớm",
+  "WORD.DEFINE.TO_JOG": "đi bộ",
+  "WORD.DEFINE.TO_GET_UP": "thức dậy",
+  "WORD.DEFINE.MEDICINE": "thuốc",
+  "WORD.DEFINE.TO_LEAVE_HOSPITAL": "xuất viện",
+  "WORD.DEFINE.TO_COME_OUT": "ra ngoài",
+  "WORD.DEFINE.TALL": "cao",
+  "WORD.DEFINE.METER": "mét",
+  "WORD.DEFINE.TO_KNOW": "biết",
+  "WORD.DEFINE.TO_TAKE_A_REST": "nghỉ ngơi",
+  "WORD.DEFINE.BUSY": "bận"
 }
