add course page

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -5,6 +5,8 @@
   "SUPER_CHINESE": "Super Chinese",
   "SLOGAN": "\"Học thêm một ngoại ngữ, đến thêm một thế giới, sống thêm một cuộc đời...\"",
   "HOME": "Trang chủ",
+  "COURSE": "Khoá học",
+  "STUDENT": "Học viên",
   "USER_PROFILE": "Hồ sơ",
   "ABOUT": "Giới thiệu",
   "VOCABULARY": "Từ vựng",
