--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,6 +5,8 @@
   "SUPER_CHINESE": "Super Chinese",
   "SLOGAN": "Learn a new language, come more world, live more life.",
   "HOME": "Home",
+  "COURSE": "Course",
+  "STUDENT": "Student",
   "USER_PROFILE": "User profile",
   "ABOUT": "About",
   "VOCABULARY": "Vocabulary",
