--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,6 +6,11 @@
   "SLOGAN": "Learn a new language, come more world, live more life.",
   "HOME": "Home",
   "COURSE": "Course",
+  "COURSE.NAME": "Name",
+  "COURSE.PRICE": "Price",
+  "COURSE.BEGIN": "Start",
+  "COURSE.CREATED": "Created date",
+  "COURSE.EXPIRED": "Status",
   "STUDENT": "Student",
   "USER_PROFILE": "User profile",
   "ABOUT": "About",
@@ -18,6 +23,8 @@
   "LOGOUT": "Logout",
   "COMING_SOON": "Coming soon...",
   "SELECT": "Select a file",
+  "INPUT.PLACE_HOLDER": "Please input",
+  "SELECT.PLACE_HOLDER": "Please select",
   "CURRICULUM.01-4": "01-4: Initials, finals and tones of Chinese Pinyin (1)",
   "CURRICULUM.02-4": "02-4: Initials, finals and tones of Chinese Pinyin (2)",
   "FOOTER": "Designed and developed by Toàn",
