--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -6,6 +6,11 @@
   "SLOGAN": "\"Học thêm một ngoại ngữ, đến thêm một thế giới, sống thêm một cuộc đời...\"",
   "HOME": "Trang chủ",
   "COURSE": "Khoá học",
+  "COURSE.NAME": "Tên",
+  "COURSE.PRICE": "Học phí",
+  "COURSE.BEGIN": "Khai giảng",
+  "COURSE.CREATED": "Ngày tạo",
+  "COURSE.EXPIRED": "Tình trạng",
   "STUDENT": "Học viên",
   "USER_PROFILE": "Hồ sơ",
   "ABOUT": "Giới thiệu",
@@ -18,6 +23,8 @@
   "LOGOUT": "Đăng xuất",
   "COMING_SOON": "Sắp có...",
   "SELECT": "Chọn bài đi nè",
+  "INPUT.PLACE_HOLDER": "Vui lòng nhập",
+  "SELECT.PLACE_HOLDER": "Vui lòng chọn",
   "CURRICULUM.01-4": "01-4: Thanh mẫu, vận mẫu và thanh điệu (1)",
   "CURRICULUM.02-4": "02-4: Thanh mẫu, vận mẫu và thanh điệu (2)",
   "FOOTER": "Được thiết kế và phát triển bởi Toàn",
