--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -6,7 +6,7 @@
   "SLOGAN": "\"Học thêm một ngoại ngữ, đến thêm một thế giới, sống thêm một cuộc đời...\"",
   "HOME": "Trang chủ",
   "COURSE": "Khoá học",
-  "COURSE.NAME": "Tên",
+  "COURSE.NAME": "Khoá",
   "COURSE.PRICE": "Học phí",
   "COURSE.BEGIN": "Khai giảng",
   "COURSE.CREATED": "Ngày tạo",
