--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -25,6 +25,8 @@
   "SELECT": "Select a file",
   "INPUT.PLACE_HOLDER": "Please input",
   "SELECT.PLACE_HOLDER": "Please select",
+  "NOTIFICATION.CREATE_SUCCESSFULLY": "Create successfully",
+  "NOTIFICATION.DELETE_SUCCESSFULLY": "Delete successfully",
   "CURRICULUM.01-4": "01-4: Initials, finals and tones of Chinese Pinyin (1)",
   "CURRICULUM.02-4": "02-4: Initials, finals and tones of Chinese Pinyin (2)",
   "FOOTER": "Designed and developed by Toàn",
