--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -8,7 +8,7 @@
   "COURSE": "Khoá học",
   "COURSE.NAME": "Khoá",
   "COURSE.PRICE": "Học phí",
-  "COURSE.BEGIN": "Khai giảng",
+  "COURSE.BEGIN": "Ngày khai giảng",
   "COURSE.CREATED": "Ngày tạo",
   "COURSE.EXPIRED": "Tình trạng",
   "STUDENT": "Học viên",
@@ -25,6 +25,7 @@
   "SELECT": "Chọn bài đi nè",
   "INPUT.PLACE_HOLDER": "Vui lòng nhập",
   "SELECT.PLACE_HOLDER": "Vui lòng chọn",
+  "CONFIRM_DELETE": "Đồng ý xoá?",
   "NOTIFICATION.CREATE_SUCCESSFULLY": "Thêm mới thành công",
   "NOTIFICATION.DELETE_SUCCESSFULLY": "Xoá thành công",
   "CURRICULUM.01-4": "01-4: Thanh mẫu, vận mẫu và thanh điệu (1)",
