--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -1,7 +1,8 @@
 {
-  "CHOOSE_LANGUAGE": "Ngôn ngữ/Language",
+  "CHOOSE_LANGUAGE": "Language/话语",
   "VI": "Tiếng Việt",
   "EN": "English",
+  "ZH": "汉文",
   "SUPER_CHINESE": "Super Chinese",
   "SLOGAN": "\"Học thêm một ngoại ngữ, đến thêm một thế giới, sống thêm một cuộc đời...\"",
   "HOME": "Trang chủ",
