--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -1,31 +1,31 @@
 {
-  "CHOOSE_LANGUAGE": "话语/Ngôn ngữ",
+  "CHOOSE_LANGUAGE": "Language/Ngôn ngữ",
   "VI": "Tiếng Việt",
   "EN": "English",
   "ZH": "汉文",
   "SUPER_CHINESE": "Super Chinese",
-  "SLOGAN": "Learn a new language, come more world, live more life.",
-  "HOME": "Home",
-  "COURSE": "Course",
-  "COURSE.NAME": "Name",
-  "COURSE.PRICE": "Price",
-  "COURSE.BEGIN": "Start",
-  "COURSE.CREATED": "Created date",
+  "SLOGAN": "多学一门外语， 多看一个世界， 多过一种人生",
+  "HOME": "主页",
+  "COURSE": "课程",
+  "COURSE.NAME": "名",
+  "COURSE.PRICE": "学费",
+  "COURSE.BEGIN": "开课",
+  "COURSE.CREATED": "创建日期",
   "COURSE.EXPIRED": "Status",
-  "STUDENT": "Student",
-  "USER_PROFILE": "User profile",
-  "ABOUT": "About",
-  "VOCABULARY": "Vocabulary",
-  "CURRICULUM": "Curriculum",
-  "EXERCISE": "Exercise",
-  "NEW": "New features",
-  "SUPPORT": "Support",
-  "SETTING": "Setting",
-  "LOGOUT": "Logout",
-  "COMING_SOON": "Coming soon...",
-  "SELECT": "Select a file",
-  "INPUT.PLACE_HOLDER": "Please input",
-  "SELECT.PLACE_HOLDER": "Please select",
+  "STUDENT": "学生",
+  "USER_PROFILE": "用户资料",
+  "ABOUT": "关于",
+  "VOCABULARY": "词汇",
+  "CURRICULUM": "教程",
+  "EXERCISE": "锻炼",
+  "NEW": "新的功能",
+  "SUPPORT": "支持",
+  "SETTING": "设置",
+  "LOGOUT": "登出",
+  "COMING_SOON": "快来了。。。",
+  "SELECT": "选择 一个 文件",
+  "INPUT.PLACE_HOLDER": "请 输入",
+  "SELECT.PLACE_HOLDER": "请 选择",
   "CONFIRM_DELETE": "Are you sure delete?",
   "NOTIFICATION.CREATE_SUCCESSFULLY": "Create successfully",
   "NOTIFICATION.DELETE_SUCCESSFULLY": "Delete successfully",
