add dictionary module

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,11 +6,15 @@
   "SUPER_CHINESE": "Super Chinese",
   "SLOGAN": "Learn a new language, come more world, live more life.",
   "HOME": "Home",
+  "DICTIONARY": "Dictionary",
+  "PLAYGROUND": "Đây là sân chơi cho những người yêu thích tiếng Trung. Hãy cùng nhau xây dựng trang web học tiếng Trung tốt nhất mọi thời đại nhé!",
   "COURSE": "Course",
   "COURSE.NAME": "Name",
   "COURSE.PRICE": "Price",
-  "COURSE.BEGIN": "Start",
+  "COURSE.BEGIN_DATE": "Start",
+  "COURSE.BEGIN_TIME": "Start",
   "COURSE.CREATED": "Created date",
+  "COURSE.CREATED_BY": "Created by",
   "COURSE.EXPIRED": "Status",
   "STUDENT": "Student",
   "USER_PROFILE": "User profile",
