--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -6,11 +6,15 @@
   "SUPER_CHINESE": "Super Chinese",
   "SLOGAN": "\"Học thêm một ngoại ngữ, đến thêm một thế giới, sống thêm một cuộc đời...\"",
   "HOME": "Trang chủ",
+  "DICTIONARY": "Từ điển",
+  "PLAYGROUND": "Đây là sân chơi cho những người yêu thích tiếng Trung. Hãy cùng nhau xây dựng trang web học tiếng Trung tốt nhất mọi thời đại nhé!",
   "COURSE": "Khoá học",
   "COURSE.NAME": "Khoá",
   "COURSE.PRICE": "Học phí",
-  "COURSE.BEGIN": "Ngày khai giảng",
+  "COURSE.BEGIN_DATE": "Ngày khai giảng",
+  "COURSE.BEGIN_TIME": "Giờ khai giảng",
   "COURSE.CREATED": "Ngày tạo",
+  "COURSE.CREATED_BY": "Người tạo",
   "COURSE.EXPIRED": "Tình trạng",
   "STUDENT": "Học viên",
   "USER_PROFILE": "Hồ sơ",
