--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -6,11 +6,15 @@
   "SUPER_CHINESE": "Super Chinese",
   "SLOGAN": "多学一门外语， 多看一个世界， 多过一种人生",
   "HOME": "主页",
+  "DICTIONARY": "词典",
+  "PLAYGROUND": "Đây là sân chơi cho những người yêu thích tiếng Trung. Hãy cùng nhau xây dựng trang web học tiếng Trung tốt nhất mọi thời đại nhé!",
   "COURSE": "课程",
   "COURSE.NAME": "名",
   "COURSE.PRICE": "学费",
-  "COURSE.BEGIN": "开课",
+  "COURSE.BEGIN_DATE": "开课",
+  "COURSE.BEGIN_TIME": "开课",
   "COURSE.CREATED": "创建日期",
+  "COURSE.CREATED_BY": "Created by",
   "COURSE.EXPIRED": "Status",
   "STUDENT": "学生",
   "USER_PROFILE": "用户资料",
