--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,12 @@
   "SLOGAN": "Learn a new language, come more world, live more life.",
   "HOME": "Home",
   "DICTIONARY": "Dictionary",
+  "ACTION.CREATE": "Create",
+  "ACTION.DELETE": "Delete",
+  "ACTION.EDIT": "Edit",
+  "DICTIONARY.DISPLAY": "Chinese word",
+  "DICTIONARY.PINYIN": "Pinyin",
+  "DICTIONARY.DEFINE": "Define",
   "PLAYGROUND": "Đây là sân chơi cho những người yêu thích tiếng Trung. Hãy cùng nhau xây dựng trang web học tiếng Trung tốt nhất mọi thời đại nhé!",
   "COURSE": "Course",
   "COURSE.NAME": "Name",
