--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -7,6 +7,12 @@
   "SLOGAN": "\"Học thêm một ngoại ngữ, đến thêm một thế giới, sống thêm một cuộc đời...\"",
   "HOME": "Trang chủ",
   "DICTIONARY": "Từ điển",
+  "ACTION.CREATE": "Thêm mới",
+  "ACTION.DELETE": "Xoá",
+  "ACTION.EDIT": "Cập nhật",
+  "DICTIONARY.DISPLAY": "Chữ Hán",
+  "DICTIONARY.PINYIN": "Pinyin",
+  "DICTIONARY.DEFINE": "Nghĩa",
   "PLAYGROUND": "Đây là sân chơi cho những người yêu thích tiếng Trung. Hãy cùng nhau xây dựng trang web học tiếng Trung tốt nhất mọi thời đại nhé!",
   "COURSE": "Khoá học",
   "COURSE.NAME": "Khoá",
