--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -7,6 +7,12 @@
   "SLOGAN": "多学一门外语， 多看一个世界， 多过一种人生",
   "HOME": "主页",
   "DICTIONARY": "词典",
+  "ACTION.CREATE": "Create",
+  "ACTION.DELETE": "Delete",
+  "ACTION.EDIT": "Edit",
+  "DICTIONARY.DISPLAY": "Chinese word",
+  "DICTIONARY.PINYIN": "Pinyin",
+  "DICTIONARY.DEFINE": "Define",
   "PLAYGROUND": "Đây là sân chơi cho những người yêu thích tiếng Trung. Hãy cùng nhau xây dựng trang web học tiếng Trung tốt nhất mọi thời đại nhé!",
   "COURSE": "课程",
   "COURSE.NAME": "名",
