--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,8 +19,8 @@
   "COURSE.PRICE": "Price",
   "COURSE.BEGIN_DATE": "Start",
   "COURSE.BEGIN_TIME": "Start",
-  "COURSE.CREATED": "Created date",
-  "COURSE.CREATED_BY": "Created by",
+  "CREATED": "Created date",
+  "CREATED_BY": "Created by",
   "COURSE.EXPIRED": "Status",
   "STUDENT": "Student",
   "USER_PROFILE": "User profile",
