--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -19,8 +19,8 @@
   "COURSE.PRICE": "Học phí",
   "COURSE.BEGIN_DATE": "Ngày khai giảng",
   "COURSE.BEGIN_TIME": "Giờ khai giảng",
-  "COURSE.CREATED": "Ngày tạo",
-  "COURSE.CREATED_BY": "Người tạo",
+  "CREATED": "Ngày tạo",
+  "CREATED_BY": "Người tạo",
   "COURSE.EXPIRED": "Tình trạng",
   "STUDENT": "Học viên",
   "USER_PROFILE": "Hồ sơ",
