--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -19,8 +19,8 @@
   "COURSE.PRICE": "学费",
   "COURSE.BEGIN_DATE": "开课",
   "COURSE.BEGIN_TIME": "开课",
-  "COURSE.CREATED": "创建日期",
-  "COURSE.CREATED_BY": "Created by",
+  "CREATED": "创建日期",
+  "CREATED_BY": "Created by",
   "COURSE.EXPIRED": "Status",
   "STUDENT": "学生",
   "USER_PROFILE": "用户资料",
