--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -20,6 +20,7 @@
   "COURSE.BEGIN_DATE": "开课",
   "COURSE.BEGIN_TIME": "开课",
   "CREATED": "创建日期",
+  "UPDATED": "Updated date",
   "CREATED_BY": "Created by",
   "COURSE.EXPIRED": "Status",
   "STUDENT": "学生",
