--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -20,6 +20,7 @@
   "COURSE.BEGIN_DATE": "Start",
   "COURSE.BEGIN_TIME": "Start",
   "CREATED": "Created date",
+  "UPDATED": "Updated date",
   "CREATED_BY": "Created by",
   "COURSE.EXPIRED": "Status",
   "STUDENT": "Student",
