--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -20,6 +20,7 @@
   "COURSE.BEGIN_DATE": "Ngày khai giảng",
   "COURSE.BEGIN_TIME": "Giờ khai giảng",
   "CREATED": "Ngày tạo",
+  "UPDATED": "Ngày cập nhật",
   "CREATED_BY": "Người tạo",
   "COURSE.EXPIRED": "Tình trạng",
   "STUDENT": "Học viên",
