--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -10,8 +10,8 @@
   "ACTION.CREATE": "Create",
   "ACTION.DELETE": "Delete",
   "ACTION.EDIT": "Edit",
-  "DICTIONARY.DISPLAY": "Chinese word",
-  "DICTIONARY.PINYIN": "Pinyin",
+  "DICTIONARY.DISPLAY": "汉子",
+  "DICTIONARY.PINYIN": "拼音",
   "DICTIONARY.DEFINE": "Define",
   "PLAYGROUND": "Đây là sân chơi cho những người yêu thích tiếng Trung. Hãy cùng nhau xây dựng trang web học tiếng Trung tốt nhất mọi thời đại nhé!",
   "COURSE": "课程",
