--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -12,7 +12,7 @@
   "ACTION.EDIT": "Edit",
   "DICTIONARY.DISPLAY": "汉子",
   "DICTIONARY.PINYIN": "拼音",
-  "DICTIONARY.DEFINE": "Define",
+  "DICTIONARY.DEFINE": "意思",
   "PLAYGROUND": "Đây là sân chơi cho những người yêu thích tiếng Trung. Hãy cùng nhau xây dựng trang web học tiếng Trung tốt nhất mọi thời đại nhé!",
   "COURSE": "课程",
   "COURSE.NAME": "名",
@@ -20,7 +20,7 @@
   "COURSE.BEGIN_DATE": "开课",
   "COURSE.BEGIN_TIME": "开课",
   "CREATED": "创建日期",
-  "UPDATED": "Updated date",
+  "UPDATED": "更新日期",
   "CREATED_BY": "Created by",
   "COURSE.EXPIRED": "Status",
   "STUDENT": "学生",
