--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,7 +13,7 @@
   "DICTIONARY.DISPLAY": "Word",
   "DICTIONARY.PINYIN": "Pinyin",
   "DICTIONARY.DEFINE": "Define",
-  "PLAYGROUND": "Đây là sân chơi cho những người yêu thích tiếng Trung. Hãy cùng nhau xây dựng trang web học tiếng Trung tốt nhất mọi thời đại nhé!",
+  "PLAYGROUND": "This is a playground for Chinese language lovers. Let's build the best Chinese learning website of all time together!",
   "COURSE": "Course",
   "COURSE.NAME": "Name",
   "COURSE.PRICE": "Price",
