--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -7,13 +7,13 @@
   "SLOGAN": "多学一门外语， 多看一个世界， 多过一种人生",
   "HOME": "主页",
   "DICTIONARY": "词典",
-  "ACTION.CREATE": "Create",
-  "ACTION.DELETE": "Delete",
-  "ACTION.EDIT": "Edit",
+  "ACTION.CREATE": "创建",
+  "ACTION.DELETE": "删除",
+  "ACTION.EDIT": "更新",
   "DICTIONARY.DISPLAY": "汉子",
   "DICTIONARY.PINYIN": "拼音",
   "DICTIONARY.DEFINE": "意思",
-  "PLAYGROUND": "Đây là sân chơi cho những người yêu thích tiếng Trung. Hãy cùng nhau xây dựng trang web học tiếng Trung tốt nhất mọi thời đại nhé!",
+  "PLAYGROUND": "这里是汉语爱好者的乐园。让我们一起打造有史以来最好的中文学习网站！",
   "COURSE": "课程",
   "COURSE.NAME": "名",
   "COURSE.PRICE": "学费",
@@ -38,8 +38,8 @@
   "INPUT.PLACE_HOLDER": "请 输入",
   "SELECT.PLACE_HOLDER": "请 选择",
   "CONFIRM_DELETE": "Are you sure delete?",
-  "NOTIFICATION.CREATE_SUCCESSFULLY": "Create successfully",
-  "NOTIFICATION.DELETE_SUCCESSFULLY": "Delete successfully",
+  "NOTIFICATION.CREATE_SUCCESSFULLY": "创建成功",
+  "NOTIFICATION.DELETE_SUCCESSFULLY": "删除成功",
   "CURRICULUM.01-4": "01-4: Initials, finals and tones of Chinese Pinyin (1)",
   "CURRICULUM.02-4": "02-4: Initials, finals and tones of Chinese Pinyin (2)",
   "FOOTER": "Designed and developed by Toàn",
