add cell directive

--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -10,7 +10,7 @@
   "ACTION.CREATE": "Tạo mới",
   "ACTION.DELETE": "Xoá",
   "ACTION.EDIT": "Cập nhật",
-  "DICTIONARY.DISPLAY": "Chữ Hán",
+  "DICTIONARY.DISPLAY": "Hán tự",
   "DICTIONARY.PINYIN": "Phiên âm",
   "DICTIONARY.DEFINE": "Nghĩa",
   "PLAYGROUND": "Đây là sân chơi cho những người yêu thích tiếng Trung. Hãy cùng nhau xây dựng trang web học tiếng Trung tốt nhất mọi thời đại nhé!",
