--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -10,6 +10,7 @@
   "ACTION.CREATE": "创建",
   "ACTION.DELETE": "删除",
   "ACTION.EDIT": "更新",
+  "NO_RESULT": "没有数据",
   "DICTIONARY.DISPLAY": "汉子",
   "DICTIONARY.PINYIN": "拼音",
   "DICTIONARY.DEFINE": "意思",
@@ -21,7 +22,7 @@
   "COURSE.BEGIN_TIME": "开课",
   "CREATED": "创建日期",
   "UPDATED": "更新日期",
-  "CREATED_BY": "Created by",
+  "CREATED_BY": "创建者",
   "COURSE.EXPIRED": "Status",
   "STUDENT": "学生",
   "USER_PROFILE": "用户资料",
