--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -10,6 +10,7 @@
   "ACTION.CREATE": "Tạo mới",
   "ACTION.DELETE": "Xoá",
   "ACTION.EDIT": "Cập nhật",
+  "NO_RESULT": "Không có dữ liệu",
   "DICTIONARY.DISPLAY": "Hán tự",
   "DICTIONARY.PINYIN": "Phiên âm",
   "DICTIONARY.DEFINE": "Nghĩa",
