--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,7 +9,7 @@
   "DICTIONARY": "Dictionary",
   "ACTION.CREATE": "Create",
   "ACTION.DELETE": "Delete",
-  "ACTION.EDIT": "Edit",
+  "ACTION.UPDATE": "Edit",
   "NO_RESULT": "No result",
   "DICTIONARY.DISPLAY": "Word",
   "DICTIONARY.PINYIN": "Pinyin",
