--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -10,6 +10,9 @@
   "ACTION.CREATE": "创建",
   "ACTION.DELETE": "删除",
   "ACTION.UPDATE": "更新",
+  "NOTIFICATION.CREATE_SUCCESSFULLY": "创建成功",
+  "NOTIFICATION.UPDATE_SUCCESSFULLY": "更新成功",
+  "NOTIFICATION.DELETE_SUCCESSFULLY": "删除成功",
   "NO_RESULT": "没有数据",
   "DICTIONARY.DISPLAY": "汉子",
   "DICTIONARY.PINYIN": "拼音",
@@ -39,8 +42,6 @@
   "INPUT.PLACE_HOLDER": "请 输入",
   "SELECT.PLACE_HOLDER": "请 选择",
   "CONFIRM_DELETE": "Are you sure delete?",
-  "NOTIFICATION.CREATE_SUCCESSFULLY": "创建成功",
-  "NOTIFICATION.DELETE_SUCCESSFULLY": "删除成功",
   "CURRICULUM.01-4": "01-4: Initials, finals and tones of Chinese Pinyin (1)",
   "CURRICULUM.02-4": "02-4: Initials, finals and tones of Chinese Pinyin (2)",
   "FOOTER": "Designed and developed by Toàn",
