--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,6 +10,10 @@
   "ACTION.CREATE": "Create",
   "ACTION.DELETE": "Delete",
   "ACTION.UPDATE": "Edit",
+  "CONFIRM_DELETE": "Are you sure delete?",
+  "NOTIFICATION.CREATE_SUCCESSFULLY": "Create successfully",
+  "NOTIFICATION.UPDATE_SUCCESSFULLY": "Update successfully",
+  "NOTIFICATION.DELETE_SUCCESSFULLY": "Delete successfully",
   "NO_RESULT": "No result",
   "DICTIONARY.DISPLAY": "Word",
   "DICTIONARY.PINYIN": "Pinyin",
@@ -21,7 +25,7 @@
   "COURSE.BEGIN_DATE": "Start",
   "COURSE.BEGIN_TIME": "Start",
   "CREATED": "Created date",
-  "UPDATED": "Updated date",
+  "UPDATED": "Latest updated date",
   "CREATED_BY": "Created by",
   "COURSE.EXPIRED": "Status",
   "STUDENT": "Student",
@@ -38,9 +42,6 @@
   "SELECT": "Select a file",
   "INPUT.PLACE_HOLDER": "Please input",
   "SELECT.PLACE_HOLDER": "Please select",
-  "CONFIRM_DELETE": "Are you sure delete?",
-  "NOTIFICATION.CREATE_SUCCESSFULLY": "Create successfully",
-  "NOTIFICATION.DELETE_SUCCESSFULLY": "Delete successfully",
   "CURRICULUM.01-4": "01-4: Initials, finals and tones of Chinese Pinyin (1)",
   "CURRICULUM.02-4": "02-4: Initials, finals and tones of Chinese Pinyin (2)",
   "FOOTER": "Designed and developed by Toàn",
