--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -10,6 +10,9 @@
   "ACTION.CREATE": "Tạo mới",
   "ACTION.DELETE": "Xoá",
   "ACTION.UPDATE": "Cập nhật",
+  "NOTIFICATION.CREATE_SUCCESSFULLY": "Thêm mới thành công",
+  "NOTIFICATION.UPDATE_SUCCESSFULLY": "Cập nhật thành công",
+  "NOTIFICATION.DELETE_SUCCESSFULLY": "Xoá thành công",
   "NO_RESULT": "Không có dữ liệu",
   "DICTIONARY.DISPLAY": "Hán tự",
   "DICTIONARY.PINYIN": "Phiên âm",
@@ -21,7 +24,7 @@
   "COURSE.BEGIN_DATE": "Ngày khai giảng",
   "COURSE.BEGIN_TIME": "Giờ khai giảng",
   "CREATED": "Ngày tạo",
-  "UPDATED": "Ngày cập nhật",
+  "UPDATED": "Ngày cập nhật lần cuối",
   "CREATED_BY": "Người tạo",
   "COURSE.EXPIRED": "Tình trạng",
   "STUDENT": "Học viên",
@@ -39,8 +42,6 @@
   "INPUT.PLACE_HOLDER": "Vui lòng nhập",
   "SELECT.PLACE_HOLDER": "Vui lòng chọn",
   "CONFIRM_DELETE": "Đồng ý xoá?",
-  "NOTIFICATION.CREATE_SUCCESSFULLY": "Thêm mới thành công",
-  "NOTIFICATION.DELETE_SUCCESSFULLY": "Xoá thành công",
   "CURRICULUM.01-4": "01-4: Thanh mẫu, vận mẫu và thanh điệu (1)",
   "CURRICULUM.02-4": "02-4: Thanh mẫu, vận mẫu và thanh điệu (2)",
   "FOOTER": "Được thiết kế và phát triển bởi Toàn",
