--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -19,6 +19,7 @@
   "NO_RESULT": "No result",
   "DICTIONARY.DISPLAY": "Word",
   "DICTIONARY.PINYIN": "Pinyin",
+  "DICTIONARY.CHINA_VIETNAM_WORD": "CN-VI word",
   "DICTIONARY.DEFINE": "Define",
   "PLAYGROUND": "This is a playground for Chinese language lovers. Let's build the best Chinese learning website of all time together!",
   "COURSE": "Course",
