--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -18,6 +18,7 @@
   "NO_RESULT": "Không có dữ liệu",
   "DICTIONARY.DISPLAY": "Hán tự",
   "DICTIONARY.PINYIN": "Phiên âm",
+  "DICTIONARY.CHINA_VIETNAM_WORD": "Hán Việt",
   "DICTIONARY.DEFINE": "Nghĩa",
   "PLAYGROUND": "Đây là sân chơi cho những người yêu thích tiếng Trung. Hãy cùng nhau xây dựng trang web học tiếng Trung tốt nhất mọi thời đại nhé!",
   "COURSE": "Khoá học",
