--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -16,8 +16,9 @@
   "NOTIFICATION.UPDATE_SUCCESSFULLY": "更新成功",
   "NOTIFICATION.DELETE_SUCCESSFULLY": "删除成功",
   "NO_RESULT": "没有数据",
-  "DICTIONARY.DISPLAY": "汉子",
+  "DICTIONARY.DISPLAY": "汉字",
   "DICTIONARY.PINYIN": "拼音",
+  "DICTIONARY.CHINA_VIETNAM_WORD": "汉越字",
   "DICTIONARY.DEFINE": "意思",
   "PLAYGROUND": "这里是汉语爱好者的乐园。让我们一起打造有史以来最好的中文学习网站！",
   "COURSE": "课程",
