--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -28,7 +28,7 @@
   "COURSE.BEGIN_DATE": "Start",
   "COURSE.BEGIN_TIME": "Start",
   "CREATED": "Created date",
-  "UPDATED": "Latest updated date",
+  "UPDATED": "Latest updated",
   "CREATED_BY": "Created by",
   "COURSE.EXPIRED": "Status",
   "STUDENT": "Student",
