--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -6,7 +6,7 @@
   "SUPER_CHINESE": "Super Chinese",
   "SLOGAN": "\"Học thêm một ngoại ngữ, đến thêm một thế giới, sống thêm một cuộc đời...\"",
   "HOME": "Trang chủ",
-  "DICTIONARY": "Từ điển",
+  "DICTIONARY": "Từ điển Hán Việt",
   "STAR": "tính năng nổi bật",
   "TOTALS": "Tất cả có {{ totals }} chữ Hán",
   "ACTION.CREATE": "Tạo mới",
