--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,7 +6,7 @@
   "SUPER_CHINESE": "Super Chinese",
   "SLOGAN": "Learn a new language, come more world, live more life.",
   "HOME": "Home",
-  "DICTIONARY": "Dictionary China Vietnam word",
+  "DICTIONARY": "China Vietnam dictionary",
   "STAR": "salient features",
   "TOTALS": "Totals: {{ totals }} words",
   "ACTION.CREATE": "Create",
