--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -12,6 +12,8 @@
   "ACTION.CREATE": "创建",
   "ACTION.DELETE": "删除",
   "ACTION.UPDATE": "更新",
+  "ACTION.LOOK_UP": "查找",
+  "ACTION.SEARCH": "Search",
   "NOTIFICATION.CREATE_SUCCESSFULLY": "创建成功",
   "NOTIFICATION.UPDATE_SUCCESSFULLY": "更新成功",
   "NOTIFICATION.DELETE_SUCCESSFULLY": "删除成功",
