--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -12,7 +12,8 @@
   "ACTION.CREATE": "Tạo mới",
   "ACTION.DELETE": "Xoá",
   "ACTION.UPDATE": "Cập nhật",
-  "ACTION.LOOK_UP": "Tra từ",
+  "ACTION.LOOK_UP.CHI_VIE": "Hán -> Việt",
+  "ACTION.LOOK_UP.VIE_CHI": "Việt -> Hán",
   "ACTION.SEARCH": "Tìm kiếm",
   "NOTIFICATION.CREATE_SUCCESSFULLY": "Thêm mới thành công",
   "NOTIFICATION.UPDATE_SUCCESSFULLY": "Cập nhật thành công",
