--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -12,7 +12,8 @@
   "ACTION.CREATE": "创建",
   "ACTION.DELETE": "删除",
   "ACTION.UPDATE": "更新",
-  "ACTION.LOOK_UP": "查找",
+  "ACTION.LOOK_UP.CHI_VIE": "汉 -> 越",
+  "ACTION.LOOK_UP.VIE_CHI": "越 -> 汉",
   "ACTION.SEARCH": "Search",
   "NOTIFICATION.CREATE_SUCCESSFULLY": "创建成功",
   "NOTIFICATION.UPDATE_SUCCESSFULLY": "更新成功",
