--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,8 +12,8 @@
   "ACTION.CREATE": "Create",
   "ACTION.DELETE": "Delete",
   "ACTION.UPDATE": "Edit",
-  "ACTION.LOOK_UP.CHI_VIE": "Look up Chinese -> Vietnamese",
-  "ACTION.LOOK_UP.VIE_CHI": "Look up Vietnamese -> Chinese",
+  "ACTION.LOOK_UP.CHI_VIE": "Chinese -> Vietnamese",
+  "ACTION.LOOK_UP.VIE_CHI": "Vietnamese -> Chinese",
   "ACTION.SEARCH": "Search",
   "CONFIRM_DELETE": "Are you sure delete?",
   "NOTIFICATION.CREATE_SUCCESSFULLY": "Create successfully",
