--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -13,7 +13,7 @@
   "ACTION.DELETE": "Xoá",
   "ACTION.UPDATE": "Cập nhật",
   "ACTION.LOOK_UP.CHI_VIE": "Hán tự -> Việt",
-  "ACTION.LOOK_UP.VIE_CHI": "Việt -> Hán",
+  "ACTION.LOOK_UP.VIE_CHI": "Việt -> Hán tự",
   "ACTION.SEARCH": "Tìm kiếm",
   "NOTIFICATION.CREATE_SUCCESSFULLY": "Thêm mới thành công",
   "NOTIFICATION.UPDATE_SUCCESSFULLY": "Cập nhật thành công",
