--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -11,11 +11,13 @@
   "TOTALS": "Totals: {{ totals }} words",
   "ACTION.CREATE": "Create",
   "ACTION.DELETE": "Delete",
+  "ACTION.DISCARD": "Discard",
   "ACTION.UPDATE": "Edit",
   "ACTION.LOOK_UP.CHI_VIE": "Chinese -> Vietnamese",
   "ACTION.LOOK_UP.VIE_CHI": "Vietnamese -> Chinese",
   "ACTION.SEARCH": "Search",
   "CONFIRM_DELETE": "Are you sure delete?",
+  "CONFIRM_DISCARD": "Are you sure discard?",
   "NOTIFICATION.CREATE_SUCCESSFULLY": "Create successfully",
   "NOTIFICATION.UPDATE_SUCCESSFULLY": "Update successfully",
   "NOTIFICATION.DELETE_SUCCESSFULLY": "Delete successfully",
