--- a/src/assets/i18n/vi.json
+++ b/src/assets/i18n/vi.json
@@ -11,10 +11,13 @@
   "TOTALS": "Tất cả: {{ totals }} từ vựng",
   "ACTION.CREATE": "Tạo mới",
   "ACTION.DELETE": "Xoá",
+  "ACTION.DISCARD": "Huỷ",
   "ACTION.UPDATE": "Cập nhật",
   "ACTION.LOOK_UP.CHI_VIE": "Hán tự -> Việt",
   "ACTION.LOOK_UP.VIE_CHI": "Việt -> Hán tự",
   "ACTION.SEARCH": "Tìm kiếm",
+  "CONFIRM_DELETE": "Đồng ý xoá?",
+  "CONFIRM_DISCARD": "Đồng ý huỷ?",
   "NOTIFICATION.CREATE_SUCCESSFULLY": "Thêm mới thành công",
   "NOTIFICATION.UPDATE_SUCCESSFULLY": "Cập nhật thành công",
   "NOTIFICATION.DELETE_SUCCESSFULLY": "Xoá thành công",
@@ -47,7 +50,6 @@
   "SELECT": "Chọn bài đi nè",
   "INPUT.PLACE_HOLDER": "Vui lòng nhập",
   "SELECT.PLACE_HOLDER": "Vui lòng chọn",
-  "CONFIRM_DELETE": "Đồng ý xoá?",
   "CURRICULUM.01-4": "01-4: Thanh mẫu, vận mẫu và thanh điệu (1)",
   "CURRICULUM.02-4": "02-4: Thanh mẫu, vận mẫu và thanh điệu (2)",
   "FOOTER": "Được thiết kế và phát triển bởi Toàn",
