--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -11,10 +11,13 @@
   "TOTALS": "全部: {{ totals }} 词汇",
   "ACTION.CREATE": "创建",
   "ACTION.DELETE": "删除",
+  "ACTION.DISCARD": "Discard",
   "ACTION.UPDATE": "更新",
   "ACTION.LOOK_UP.CHI_VIE": "汉字 -> 越语",
   "ACTION.LOOK_UP.VIE_CHI": "越语 -> 汉字",
   "ACTION.SEARCH": "Search",
+  "CONFIRM_DELETE": "Are you sure delete?",
+  "CONFIRM_DISCARD": "Are you sure discard?",
   "NOTIFICATION.CREATE_SUCCESSFULLY": "创建成功",
   "NOTIFICATION.UPDATE_SUCCESSFULLY": "更新成功",
   "NOTIFICATION.DELETE_SUCCESSFULLY": "删除成功",
@@ -47,7 +50,6 @@
   "SELECT": "选择 一个 文件",
   "INPUT.PLACE_HOLDER": "请 输入",
   "SELECT.PLACE_HOLDER": "请 选择",
-  "CONFIRM_DELETE": "Are you sure delete?",
   "CURRICULUM.01-4": "01-4: Initials, finals and tones of Chinese Pinyin (1)",
   "CURRICULUM.02-4": "02-4: Initials, finals and tones of Chinese Pinyin (2)",
   "FOOTER": "Designed and developed by Toàn",
