--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -38,7 +38,7 @@
   "STUDENT": "学生",
   "USER_PROFILE": "用户资料",
   "ABOUT": "关于",
-  "VOCABULARY": "词汇",
+  "VOCABULARY": "单词",
   "CURRICULUM": "教程",
   "EXERCISE": "锻炼",
   "NEW": "新的功能",
